syntax = "proto3";
option csharp_namespace = "BlazingFreezer";

service FreezerService {
  rpc GetFreezerOverview (FreezerOverviewRequest) returns (FreezerOverviewReply);
  rpc GetFreezerDetails (FreezerDetailsRequest) returns (FreezerDetailsReply);
}

message FreezerOverviewRequest {
  
}

message FreezerDetailsRequest {
  int32 freezerId = 1;
}

message FreezerDetailsReply { 
  repeated FreezerDetailsItem items = 1;
}

message FreezerDetailsItem {
  int32 drawerId = 1;
  int32 itemId = 2;
  string name = 3;
  bool isVacuum = 4;
  string since = 5;
}

message FreezerOverviewReply {
  repeated FreezerOverviewItem items = 1;
}

message FreezerOverviewItem {
  int32 freezerId = 1;
  string name = 2;
  int32 drawerCount = 3;
  int32 itemCount = 4;
}